Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-87312

qtdiag.cpp:794:54: error: ‘const class QPlatformScreen’ has no member named ‘pixelDensity’

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P0: Blocker P0: Blocker
    • 6.0.0 Beta1
    • 6.0.0 Beta1
    • Tools: Linguist
    • None
    • ea5e45805301365a5c26fc0390f01a7ffe3bcef0 (qt/qttools/dev)

      Continuous Integration: Failed
      
      Running make failed. The CI rejected the staged commits due to the beforementioned reason. Possible reason could be a bug in one of the commits or some more recent change. Please investigate it.
      
      The error was in "qt/qttools", revision: 38fda93f66e5c6c94df27deca389124d7eabd5e1
      
       
       305: /home/qt/work/install/bin/rcc -name helpsystem helpsystem.qrc -o .rcc/qrc_helpsystem.cpp
       g++ -c -pipe -O2 -std=c++1z -fno-exceptions -Wall -Wextra -ffunction-sections -fdata-sections -D_REENTRANT -fPIC -DQT_NO_JAVA_STYLE_ITERATORS -DQT_NO_CAST_FROM_ASCII -DQT_NO_CAST_TO_ASCII -DQT_NO_NARROWING_CONVERSIONS_IN_CONNECT -DQT_USE_QSTRINGBUILDER -DQT_NO_EXCEPTIONS -D_LARGEFILE64_SOURCE -D_LARGEFILE_SOURCE -DQT_NO_DEBUG -DQT_BOOTSTRAP_LIB -DQT_VERSION_STR='"6.0.0"' -DQT_VERSION_MAJOR=6 -DQT_VERSION_MINOR=0 -DQT_VERSION_PATCH=0 -DQT_BOOTSTRAPPED -DQT_NO_CAST_TO_ASCII -DPCRE2_CODE_UNIT_WIDTH=16 -I. -I/home/qt/work/install/include -I/home/qt/work/install/include/QtCore -I/home/qt/work/install/include/QtCore/6.0.0 -I/home/qt/work/install/include/QtCore/6.0.0/QtCore -I/home/qt/work/install/include/QtXml -I/home/qt/work/install/include/QtXml/6.0.0 -I/home/qt/work/install/include/QtXml/6.0.0/QtXml -I/home/qt/work/install/mkspecs/linux-g++ -o .obj/main.o main.cpp
       /opt/yocto-mips64/sysroots/x86_64-pokysdk-linux/usr/bin/mips64-poky-linux/mips64-poky-linux-g++ --sysroot=/opt/yocto-mips64/sysroots/mips64r2-poky-linux -Wl,-O1 -Wl,--enable-new-dtags -Wl,-z,origin -Wl,-rpath,\$ORIGIN/../lib -Wl,-rpath,\$ORIGIN/../lib -o ../../bin/qtplugininfo .obj/qtplugininfo.o   /home/qt/work/install/lib/libQt6Core.so -lpthread
       g++ -c -pipe -O2 -std=c++1z -fno-exceptions -Wall -Wextra -ffunction-sections -fdata-sections -D_REENTRANT -fPIC -DQT_NO_JAVA_STYLE_ITERATORS -DQT_NO_CAST_FROM_ASCII -DQT_NO_CAST_TO_ASCII -DQT_NO_NARROWING_CONVERSIONS_IN_CONNECT -DQT_USE_QSTRINGBUILDER -DQT_NO_EXCEPTIONS -D_LARGEFILE64_SOURCE -D_LARGEFILE_SOURCE -DQT_NO_DEBUG -DQT_BOOTSTRAP_LIB -DQT_VERSION_STR='"6.0.0"' -DQT_VERSION_MAJOR=6 -DQT_VERSION_MINOR=0 -DQT_VERSION_PATCH=0 -DQT_BOOTSTRAPPED -DQT_NO_CAST_TO_ASCII -DPCRE2_CODE_UNIT_WIDTH=16 -I. -I/home/qt/work/install/include -I/home/qt/work/install/include/QtCore -I/home/qt/work/install/include/QtCore/6.0.0 -I/home/qt/work/install/include/QtCore/6.0.0/QtCore -I/home/qt/work/install/include/QtXml -I/home/qt/work/install/include/QtXml/6.0.0 -I/home/qt/work/install/include/QtXml/6.0.0/QtXml -I/home/qt/work/install/mkspecs/linux-g++ -o .obj/packagefilter.o packagefilter.cpp
       /opt/yocto-mips64/sysroots/x86_64-pokysdk-linux/usr/bin/mips64-poky-linux/mips64-poky-linux-g++ --sysroot=/opt/yocto-mips64/sysroots/mips64r2-poky-linux -Wl,-O1 -Wl,--enable-new-dtags -Wl,-z,origin -Wl,-rpath,\$ORIGIN/../lib -Wl,-rpath,\$ORIGIN/../lib -o ../../bin/qtpaths .obj/qtpaths.o   /home/qt/work/install/lib/libQt6Core.so -lpthread
       make[2]: Leaving directory '/home/qt/work/qt/qttools/src/qtplugininfo'
       g++ -c -pipe -O2 -std=c++1z -fno-exceptions -Wall -Wextra -ffunction-sections -fdata-sections -D_REENTRANT -fPIC -DQT_NO_JAVA_STYLE_ITERATORS -DQT_NO_CAST_FROM_ASCII -DQT_NO_CAST_TO_ASCII -DQT_NO_NARROWING_CONVERSIONS_IN_CONNECT -DQT_USE_QSTRINGBUILDER -DQT_NO_EXCEPTIONS -D_LARGEFILE64_SOURCE -D_LARGEFILE_SOURCE -DQT_NO_DEBUG -DQT_BOOTSTRAP_LIB -DQT_VERSION_STR='"6.0.0"' -DQT_VERSION_MAJOR=6 -DQT_VERSION_MINOR=0 -DQT_VERSION_PATCH=0 -DQT_BOOTSTRAPPED -DQT_NO_CAST_TO_ASCII -DPCRE2_CODE_UNIT_WIDTH=16 -I. -I/home/qt/work/install/include -I/home/qt/work/install/include/QtCore -I/home/qt/work/install/include/QtCore/6.0.0 -I/home/qt/work/install/include/QtCore/6.0.0/QtCore -I/home/qt/work/install/include/QtXml -I/home/qt/work/install/include/QtXml/6.0.0 -I/home/qt/work/install/include/QtXml/6.0.0/QtXml -I/home/qt/work/install/mkspecs/linux-g++ -o .obj/qdocgenerator.o qdocgenerator.cpp
       make[2]: Leaving directory '/home/qt/work/qt/qttools/src/qtpaths'
       g++ -c -pipe -O2 -std=c++1z -fno-exceptions -Wall -Wextra -ffunction-sections -fdata-sections -D_REENTRANT -fPIC -DQT_NO_JAVA_STYLE_ITERATORS -DQT_NO_CAST_FROM_ASCII -DQT_NO_CAST_TO_ASCII -DQT_NO_NARROWING_CONVERSIONS_IN_CONNECT -DQT_USE_QSTRINGBUILDER -DQT_NO_EXCEPTIONS -D_LARGEFILE64_SOURCE -D_LARGEFILE_SOURCE -DQT_NO_DEBUG -DQT_BOOTSTRAP_LIB -DQT_VERSION_STR='"6.0.0"' -DQT_VERSION_MAJOR=6 -DQT_VERSION_MINOR=0 -DQT_VERSION_PATCH=0 -DQT_BOOTSTRAPPED -DQT_NO_CAST_TO_ASCII -DPCRE2_CODE_UNIT_WIDTH=16 -I. -I/home/qt/work/install/include -I/home/qt/work/install/include/QtCore -I/home/qt/work/install/include/QtCore/6.0.0 -I/home/qt/work/install/include/QtCore/6.0.0/QtCore -I/home/qt/work/install/include/QtXml -I/home/qt/work/install/include/QtXml/6.0.0 -I/home/qt/work/install/include/QtXml/6.0.0/QtXml -I/home/qt/work/install/mkspecs/linux-g++ -o .obj/scanner.o scanner.cpp
       qtdiag.cpp: In function ‘QString qtDiag(unsigned int)’:
       qtdiag.cpp:794:54: error: ‘const class QPlatformScreen’ has no member named ‘pixelDensity’
       
       315: qtdiag.cpp:794:54: error: ‘const class QPlatformScreen’ has no member named ‘pixelDensity’
                    << " Pixel density: " << platformScreen->pixelDensity();
                                                             ^~~~~~~~~~~~
       cd qdbusviewer/ && ( test -e Makefile || /home/qt/work/install/bin/qmake -o Makefile /home/qt/work/qt/qttools/src/qdbus/qdbusviewer/qdbusviewer.pro INSTALL_PREFIX=/home/qt/work/install ) && make -f Makefile
       make[3]: Entering directory '/home/qt/work/qt/qttools/src/qdbus/qdbusviewer'
       /opt/yocto-mips64/sysroots/x86_64-pokysdk-linux/usr/bin/mips64-poky-linux/mips64-poky-linux-g++ -c -pipe --sysroot=/opt/yocto-mips64/sysroots/mips64r2-poky-linux -O2 -std=c++1z -fno-exceptions -Wall -Wextra -Wvla -Wdate-time -Wshift-overflow=2 -Wduplicated-cond -Wno-stringop-overflow -D_REENTRANT -fPIC -DQT_NO_JAVA_STYLE_ITERATORS -DQT_NO_NARROWING_CONVERSIONS_IN_CONNECT -DQT_NO_EXCEPTIONS -D_LARGEFILE64_SOURCE -D_LARGEFILE_SOURCE -DQT_NO_DEBUG -DQT_WIDGETS_LIB -DQT_GUI_LIB -DQT_DBUS_LIB -DQT_XML_LIB -DQT_CORE_LIB -I. -I/home/qt/work/install/include -I/home/qt/work/install/include/QtWidgets -I/home/qt/work/install/include/QtGui -I/home/qt/work/install/include/QtDBus/6.0.0 -I/home/qt/work/install/include/QtDBus/6.0.0/QtDBus -I/home/qt/work/install/include/QtCore/6.0.0 -I/home/qt/work/install/include/QtCore/6.0.0/QtCore -I/home/qt/work/install/include/QtDBus -I/home/qt/work/install/include/QtXml -I/home/qt/work/install/include/QtCore -I.moc -I/home/qt/work/install/mkspecs/devices/linux-generic-g++ -o .obj/qdbusviewer.o qdbusviewer.cpp
       /opt/yocto-mips64/sysroots/x86_64-pokysdk-linux/usr/bin/mips64-poky-linux/mips64-poky-linux-g++ -c -pipe --sysroot=/opt/yocto-mips64/sysroots/mips64r2-poky-linux -O2 -std=c++1z -fno-exceptions -Wall -Wextra -Wvla -Wdate-time -Wshift-overflow=2 -Wduplicated-cond -Wno-stringop-overflow -D_REENTRANT -fPIC -DQT_NO_JAVA_STYLE_ITERATORS -DQT_NO_NARROWING_CONVERSIONS_IN_CONNECT -DQT_NO_EXCEPTIONS -D_LARGEFILE64_SOURCE -D_LARGEFILE_SOURCE -DQT_NO_DEBUG -DQT_WIDGETS_LIB -DQT_GUI_LIB -DQT_DBUS_LIB -DQT_XML_LIB -DQT_CORE_LIB -I. -I/home/qt/work/install/include -I/home/qt/work/install/include/QtWidgets -I/home/qt/work/install/include/QtGui -I/home/qt/work/install/include/QtDBus/6.0.0 -I/home/qt/work/install/include/QtDBus/6.0.0/QtDBus -I/home/qt/work/install/include/QtCore/6.0.0 -I/home/qt/work/install/include/QtCore/6.0.0/QtCore -I/home/qt/work/install/include/QtDBus -I/home/qt/work/install/include/QtXml -I/home/qt/work/install/include/QtCore -I.moc -I/home/qt/work/install/mkspecs/devices/linux-generic-g++ -o .obj/qdbusmodel.o qdbusmodel.cpp
       /opt/yocto-mips64/sysroots/x86_64-pokysdk-linux/usr/bin/mips64-poky-linux/mips64-poky-linux-g++ --sysroot=/opt/yocto-mips64/sysroots/mips64r2-poky-linux -Wl,-O1 -Wl,--enable-new-dtags -Wl,-z,origin -Wl,-rpath,\$ORIGIN/../lib -Wl,-rpath,\$ORIGIN/../lib -o ../../../bin/qdbus .obj/qdbus.o   /home/qt/work/install/lib/libQt6DBus.so /home/qt/work/install/lib/libQt6Xml.so /home/qt/work/install/lib/libQt6Core.so -lpthread
       make[3]: Leaving directory '/home/qt/work/qt/qttools/src/qdbus/qdbus'
       /opt/yocto-mips64/sysroots/x86_64-pokysdk-linux/usr/bin/mips64-poky-linux/mips64-poky-linux-g++ -c -pipe --sysroot=/opt/yocto-mips64/sysroots/mips64r2-poky-linux -O2 -std=c++1z -fno-exceptions -Wall -Wextra -Wvla -Wdate-time -Wshift-overflow=2 -Wduplicated-cond -Wno-stringop-overflow -D_REENTRANT -fPIC -DQT_NO_JAVA_STYLE_ITERATORS -DQT_NO_NARROWING_CONVERSIONS_IN_CONNECT -DQT_NO_EXCEPTIONS -D_LARGEFILE64_SOURCE -D_LARGEFILE_SOURCE -DQT_NO_DEBUG -DQT_WIDGETS_LIB -DQT_GUI_LIB -DQT_DBUS_LIB -DQT_XML_LIB -DQT_CORE_LIB -I. -I/home/qt/work/install/include -I/home/qt/work/install/include/QtWidgets -I/home/qt/work/install/include/QtGui -I/home/qt/work/install/include/QtDBus/6.0.0 -I/home/qt/work/install/include/QtDBus/6.0.0/QtDBus -I/home/qt/work/install/include/QtCore/6.0.0 -I/home/qt/work/install/include/QtCore/6.0.0/QtCore -I/home/qt/work/install/include/QtDBus -I/home/qt/work/install/include/QtXml -I/home/qt/work/install/include/QtCore -I.moc -I/home/qt/work/install/mkspecs/devices/linux-generic-g++ -o .obj/servicesproxymodel.o servicesproxymodel.cpp
       make[2]: *** [Makefile:754: .obj/qtdiag.o] Error 1
       
       317:                                                       ^~~~~~~~~~~~
       cd qdbusviewer/ && ( test -e Makefile || /home/qt/work/install/bin/qmake -o Makefile /home/qt/work/qt/qttools/src/qdbus/qdbusviewer/qdbusviewer.pro INSTALL_PREFIX=/home/qt/work/install ) && make -f Makefile
       make[3]: Entering directory '/home/qt/work/qt/qttools/src/qdbus/qdbusviewer'
       /opt/yocto-mips64/sysroots/x86_64-pokysdk-linux/usr/bin/mips64-poky-linux/mips64-poky-linux-g++ -c -pipe --sysroot=/opt/yocto-mips64/sysroots/mips64r2-poky-linux -O2 -std=c++1z -fno-exceptions -Wall -Wextra -Wvla -Wdate-time -Wshift-overflow=2 -Wduplicated-cond -Wno-stringop-overflow -D_REENTRANT -fPIC -DQT_NO_JAVA_STYLE_ITERATORS -DQT_NO_NARROWING_CONVERSIONS_IN_CONNECT -DQT_NO_EXCEPTIONS -D_LARGEFILE64_SOURCE -D_LARGEFILE_SOURCE -DQT_NO_DEBUG -DQT_WIDGETS_LIB -DQT_GUI_LIB -DQT_DBUS_LIB -DQT_XML_LIB -DQT_CORE_LIB -I. -I/home/qt/work/install/include -I/home/qt/work/install/include/QtWidgets -I/home/qt/work/install/include/QtGui -I/home/qt/work/install/include/QtDBus/6.0.0 -I/home/qt/work/install/include/QtDBus/6.0.0/QtDBus -I/home/qt/work/install/include/QtCore/6.0.0 -I/home/qt/work/install/include/QtCore/6.0.0/QtCore -I/home/qt/work/install/include/QtDBus -I/home/qt/work/install/include/QtXml -I/home/qt/work/install/include/QtCore -I.moc -I/home/qt/work/install/mkspecs/devices/linux-generic-g++ -o .obj/qdbusviewer.o qdbusviewer.cpp
       /opt/yocto-mips64/sysroots/x86_64-pokysdk-linux/usr/bin/mips64-poky-linux/mips64-poky-linux-g++ -c -pipe --sysroot=/opt/yocto-mips64/sysroots/mips64r2-poky-linux -O2 -std=c++1z -fno-exceptions -Wall -Wextra -Wvla -Wdate-time -Wshift-overflow=2 -Wduplicated-cond -Wno-stringop-overflow -D_REENTRANT -fPIC -DQT_NO_JAVA_STYLE_ITERATORS -DQT_NO_NARROWING_CONVERSIONS_IN_CONNECT -DQT_NO_EXCEPTIONS -D_LARGEFILE64_SOURCE -D_LARGEFILE_SOURCE -DQT_NO_DEBUG -DQT_WIDGETS_LIB -DQT_GUI_LIB -DQT_DBUS_LIB -DQT_XML_LIB -DQT_CORE_LIB -I. -I/home/qt/work/install/include -I/home/qt/work/install/include/QtWidgets -I/home/qt/work/install/include/QtGui -I/home/qt/work/install/include/QtDBus/6.0.0 -I/home/qt/work/install/include/QtDBus/6.0.0/QtDBus -I/home/qt/work/install/include/QtCore/6.0.0 -I/home/qt/work/install/include/QtCore/6.0.0/QtCore -I/home/qt/work/install/include/QtDBus -I/home/qt/work/install/include/QtXml -I/home/qt/work/install/include/QtCore -I.moc -I/home/qt/work/install/mkspecs/devices/linux-generic-g++ -o .obj/qdbusmodel.o qdbusmodel.cpp
       /opt/yocto-mips64/sysroots/x86_64-pokysdk-linux/usr/bin/mips64-poky-linux/mips64-poky-linux-g++ --sysroot=/opt/yocto-mips64/sysroots/mips64r2-poky-linux -Wl,-O1 -Wl,--enable-new-dtags -Wl,-z,origin -Wl,-rpath,\$ORIGIN/../lib -Wl,-rpath,\$ORIGIN/../lib -o ../../../bin/qdbus .obj/qdbus.o   /home/qt/work/install/lib/libQt6DBus.so /home/qt/work/install/lib/libQt6Xml.so /home/qt/work/install/lib/libQt6Core.so -lpthread
       make[3]: Leaving directory '/home/qt/work/qt/qttools/src/qdbus/qdbus'
       /opt/yocto-mips64/sysroots/x86_64-pokysdk-linux/usr/bin/mips64-poky-linux/mips64-poky-linux-g++ -c -pipe --sysroot=/opt/yocto-mips64/sysroots/mips64r2-poky-linux -O2 -std=c++1z -fno-exceptions -Wall -Wextra -Wvla -Wdate-time -Wshift-overflow=2 -Wduplicated-cond -Wno-stringop-overflow -D_REENTRANT -fPIC -DQT_NO_JAVA_STYLE_ITERATORS -DQT_NO_NARROWING_CONVERSIONS_IN_CONNECT -DQT_NO_EXCEPTIONS -D_LARGEFILE64_SOURCE -D_LARGEFILE_SOURCE -DQT_NO_DEBUG -DQT_WIDGETS_LIB -DQT_GUI_LIB -DQT_DBUS_LIB -DQT_XML_LIB -DQT_CORE_LIB -I. -I/home/qt/work/install/include -I/home/qt/work/install/include/QtWidgets -I/home/qt/work/install/include/QtGui -I/home/qt/work/install/include/QtDBus/6.0.0 -I/home/qt/work/install/include/QtDBus/6.0.0/QtDBus -I/home/qt/work/install/include/QtCore/6.0.0 -I/home/qt/work/install/include/QtCore/6.0.0/QtCore -I/home/qt/work/install/include/QtDBus -I/home/qt/work/install/include/QtXml -I/home/qt/work/install/include/QtCore -I.moc -I/home/qt/work/install/mkspecs/devices/linux-generic-g++ -o .obj/servicesproxymodel.o servicesproxymodel.cpp
       make[2]: *** [Makefile:754: .obj/qtdiag.o] Error 1
       make[2]: Leaving directory '/home/qt/work/qt/qttools/src/qtdiag'
       make[1]: *** [Makefile:334: sub-qtdiag-make_first] Error 2
       
       456: make[4]: Leaving directory '/home/qt/work/qt/qttools/src/designer/src/uitools'
       make[3]: Leaving directory '/home/qt/work/qt/qttools/src/designer/src'
       make[2]: Leaving directory '/home/qt/work/qt/qttools/src/designer'
       make[1]: Leaving directory '/home/qt/work/qt/qttools/src'
       make: *** [Makefile:49: sub-src-make_first] Error 2
       Process finished with error: exit status 2
       Executing scheduled instruction 1 of 1 - Upload all core dumps if there are some
       Skip uploading core files because CORE_FILES_PATH is not set in the environment
       agent:2020/10/09 09:50:23 build.go:662:
       Build failed
       ERROR building: exit status 2
      

      Build log: https://testresults.qt.io/logs/qt/qttools/5bd6ddfc449a001aca8e26526c79524e163d3be5/LinuxUbuntu_20_04x86_64LinuxQEMUmips64GCCqtci-linux-Ubuntu-20.04-x86_64-50-bcf343DisableTests_UseLegacyInstructions/b721c6194f735263775d8da0f6935c44cfeebc0e/build_1602236927/log.txt.gz

      Details: https://testresults.qt.io/coin/integration/qt/qttools/tasks/1602236737

      Tested changes (refs/builds/qtci/dev/1602236735):
      https://codereview.qt-project.org/c/qt/qttools/+/316852/1 Update dependencies on 'dev' in qt/qttools
      https://codereview.qt-project.org/c/qt/qttools/+/316782/1 Update QStringConverter usage

        For Gerrit Dashboard: QTBUG-87312
        # Subject Branch Project Status CR V

            laknoll Lars Knoll
            janihe Jani Heikkinen
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes