Fix compile after qtbase update

Fixes: QTBUG-87312
Change-Id: I970fd6ec986703cbe90199476fe13b555c87817b
Reviewed-by: Kai Koehne <kai.koehne@qt.io>